Add flux version to flux runtime table (#2906)
