# api/core/core.swagger.json
@@ -568,6 +568,12 @@
         },
         "uid": {
           "type": "string"
+        },
+        "labels": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
         }
       }
     },
